--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Name | Engineering Portfolio</title>
+  <title>Aryan Bin Zobaier | Engineering Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h1>Your Name</h1>
-  <p>Engineering student focused on hands-on design, analysis, and applied problem solving.</p>
+  <h1>Aryan Bin Zobaier</h1>
+  <p>An enthusiastic mechanical engineering student focused on hands-on design, analysis, and applied problem solving.</p>
 </header>
 
 <section class="categories">
@@ -27,8 +27,9 @@
 </section>
 
 <footer>
-  <p>© 2025 Your Name</p>
+  <p>Â© 2025 Aryan Bin Zobaier</p>
 </footer>
 
 </body>
 </html>
+
