under development message

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <header>
   <h1>Aryan Bin Zobaier</h1>
   <p>An enthusiastic mechanical engineering student focused on hands-on design, analysis, and applied problem solving.</p>
+  <p>NOTE: WEBSITE IS STILL UNDER DEVELOPMENT</p>
 </header>
 
 <section class="categories">
@@ -32,4 +33,5 @@
 
 </body>
 </html>
+
 
