--- a/index.html
+++ b/index.html
@@ -6,32 +6,50 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="page-wrapper">
+    <div class="side1">
+        <div class="wrapper">
+            <h1>ARYAN BIN ZOBAIER</h1>
+            <img class="profile-pic" src="profile-pic.jpg">
+            <h2>NOTE: WEBSITE IS CURRENTLY UNDER ACTIVE DEVELOPMENT</h2>
+            <h2>2nd Year Mechanical Engineering Student</h2>
+            <p>Connect:
+                <a href="mailto:aryanbinzobaier@gmail.com">Email</a>
+                <a href="http://www.linkedin.com/in/aryan-bin-zobaier/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://github.com/aryanbinzobaier" target="_blank" rel="noopener noreferrer">Github</a>
+                <a href="assets/resume-portfolio.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
+            </p>
+        </div>
+        <div class="wrapper">
+            <h1>About Me</h1>
+            <p>I am a second-year Mechanical Engineering student at Carleton University with strong interests in mechanical design 
+            but also aerospace, mechatronics, biomedical applications, and automation. I am currently focused on the automotive and 
+            engineering field through my involvement in Formula SAE (FSAE). My passion for engineering stems from innovating creative
+             solutions that have real-world impact. From a young age, I've always been driven by the challenge of building something 
+             new, thinking outside the box, and pushing technical boundaries.</p>
+        </div>
+    </div>
+    <div class="side2">
+        <div class="wrapper">
+            <section class="categories">
+              <a href="category-fsae.html" class="card">
+                <img src="images/fsae-thumb.jpg" alt="FSAE">
+                <h2>Formula SAE</h2>
+                <p>Vehicle dynamics, suspension design, and analysis</p>
+              </a>
 
-<header>
-  <h1>Aryan Bin Zobaier</h1>
-  <p>An enthusiastic mechanical engineering student focused on hands-on design, analysis, and applied problem solving.</p>
-  <p>NOTE: WEBSITE IS STILL UNDER DEVELOPMENT</p>
-</header>
-
-<section class="categories">
-  <a href="category-fsae.html" class="card">
-    <img src="images/fsae-thumb.jpg" alt="FSAE">
-    <h2>Formula SAE</h2>
-    <p>Vehicle dynamics, suspension design, and analysis</p>
-  </a>
-
-  <a href="category-fsae.html" class="card">
-    <img src="images/placeholder.jpg" alt="BioCare">
-    <h2>BioCare</h2>
-    <p>Mechanical design, prototyping, and GD&T</p>
-  </a>
-</section>
+              <a href="category-fsae.html" class="card">
+                <img src="images/placeholder.jpg" alt="BioCare">
+                <h2>BioCare</h2>
+                <p>Mechanical design, prototyping, and GD&T</p>
+              </a>
+            </section>
+        </div>
+    </div>
 
 <footer>
-  <p>Â© 2025 Aryan Bin Zobaier</p>
+  <p>© 2025 Your Name</p>
 </footer>
 
 </body>
 </html>
-
-
