--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
             </section>
         </div>
     </div>
-
+  </div>
 <footer>
-  <p>© 2025 Your Name</p>
+  <p>Â© 2025 Your Name</p>
 </footer>
 
 </body>
 </html>
+
