--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,51 +6,55 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="page-wrapper">
-    <div class="side1">
-        <div class="wrapper">
-            <h1>ARYAN BIN ZOBAIER</h1>
-            <img class="profile-pic" src="profile-pic.jpg">
-            <h2>NOTE: WEBSITE IS CURRENTLY UNDER ACTIVE DEVELOPMENT</h2>
-            <h2>2nd Year Mechanical Engineering Student</h2>
-            <p>Connect:
-                <a href="mailto:aryanbinzobaier@gmail.com">Email</a>
-                <a href="http://www.linkedin.com/in/aryan-bin-zobaier/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                <a href="https://github.com/aryanbinzobaier" target="_blank" rel="noopener noreferrer">Github</a>
-                <a href="assets/resume-portfolio.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
-            </p>
-        </div>
-        <div class="wrapper">
-            <h1>About Me</h1>
-            <p>I am a second-year Mechanical Engineering student at Carleton University with strong interests in mechanical design 
-            but also aerospace, mechatronics, biomedical applications, and automation. I am currently focused on the automotive and 
-            engineering field through my involvement in Formula SAE (FSAE). My passion for engineering stems from innovating creative
-             solutions that have real-world impact. From a young age, I've always been driven by the challenge of building something 
-             new, thinking outside the box, and pushing technical boundaries.</p>
-        </div>
-    </div>
-    <div class="side2">
-        <div class="wrapper">
-            <section class="categories">
-              <a href="category-fsae.html" class="card">
-                <img src="images/fsae-thumb.jpg" alt="FSAE">
-                <h2>Formula SAE</h2>
-                <p>Vehicle dynamics, suspension design, and analysis</p>
-              </a>
 
-              <a href="category-fsae.html" class="card">
-                <img src="images/placeholder.jpg" alt="BioCare">
-                <h2>BioCare</h2>
-                <p>Mechanical design, prototyping, and GD&T</p>
-              </a>
-            </section>
-        </div>
-    </div>
-  </div>
+<header>
+    <h1>ARYAN BIN ZOBAIER</h1>
+    <h2>NOTE: WEBSITE IS CURRENTLY UNDER ACTIVE DEVELOPMENT</h2>
+    <h2>2nd Year Mechanical Engineering Student</h2>
+    <p>Connect:
+        <a href="mailto:aryanbinzobaier@gmail.com">Email</a>
+        <a href="http://www.linkedin.com/in/aryan-bin-zobaier/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a href="https://github.com/aryanbinzobaier" target="_blank" rel="noopener noreferrer">Github</a>
+        <a href="assets/resume-portfolio.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
+    </p>
+</header>
+                    
+<h1>About Me</h1>
+<p>I am a second-year Mechanical Engineering student at Carleton University with strong interests in mechanical design 
+but also aerospace, mechatronics, biomedical applications, and automation. I am currently focused on the automotive and 
+engineering field through my involvement in Formula SAE (FSAE). My passion for engineering stems from innovating creative
+    solutions that have real-world impact. From a young age, I've always been driven by the challenge of building something 
+    new, thinking outside the box, and pushing technical boundaries.</p>
+
+<section class="categories">
+  <a href="mech-projects/category-mech.html" class="card">
+    <img src="images/placeholder.jpg" alt="CAD Example">
+    <h2>MECHANICAL DESIGN</h2>
+    <p>FSAE | CAD | 3D Prints | Analysis</p>
+  </a>
+
+  <a href="tron-projects/category-tron.html" class="card">
+    <img src="images/placeholder.jpg" alt="Robot Example">
+    <h2>MECHATRONICS</h2>
+    <p>Arduino | Raspberry Pi | Robotics</p>
+  </a>
+
+  <a href="prog-projects/category-prog.html" class="card">
+    <img src="images/placeholder.jpg" alt="Code Image">
+    <h2>PROGRAMMING</h2>
+    <p>Coding | MATLAB | Simulations</p>
+  </a>
+
+  <a href="team-projects/category-team.html" class="card">
+    <img src="images/placeholder.jpg" alt="Team Pic">
+    <h2>TEAM PROJECTS</h2>
+    <p>Reports | Competitions | Collaboration</p>
+  </a>
+</section>
+
 <footer>
-  <p>© 2025 Your Name</p>
+  <p>© 2025-2026 Aryan Bin Zobaier | Engineering Portfolio</p>
 </footer>
 
 </body>
 </html>
-
